Add disable alerting endpoint
