# docs/openapi.yaml
@@ -351,6 +351,42 @@ paths:
         '500':
           description: Internal server error
 
+  /tracking/devices/{deviceID}/alerting/disable:
+    post:
+      tags:
+        - Alerting
+      summary: "Disable alerting"
+      description: >
+        Disables alerting on a target device. The alerting should be disabled if you don't want to receive
+        notifications on device movement.
+      parameters:
+        - name: deviceID
+          in: path
+          required: true
+          description: ID of the target device
+          schema:
+            type: number
+      operationId: postAlertingDisable
+      responses:
+        '200':
+          description: Alerting was disabled
+        '400':
+          description: Something bad happened
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    enum: [INVALID_VARS]
+        '404':
+          description: The device was not found (or not owned by you)
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
+
 components:
   schemas:
     AuthRegisterRequest:
